force-app/main/default/objects/Staff_Assignment__c/Staff_Assignment__c.object-meta.xml
<CustomObject>
    <description>Junction object between Staff &amp; Policy Information</description>
    <label>Staff Assignment</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Staff Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Assignment</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>