force-app/main/default/objects/Staff_Assignment__c/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <label>Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>New Business Existing Account</fullName>
            </value>
            <value>
                <fullName>Spin Off</fullName>
            </value>
            <value>
                <fullName>KA to NA</fullName>
            </value>
            <value>
                <fullName>Consultative</fullName>
            </value>
            <value>
                <fullName>Specialty Only</fullName>
            </value>
            <value>
                <fullName>Special Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>