force-app/main/default/objects/Staff_Assignment__c/fields/Case_FTE_s__c.field-meta.xml
<CustomField>
    <fullName>Case_FTE_s__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(Assignment_Type__c, &quot;New Business&quot;),
        ISPICKVAL(Assignment_Type__c, &quot;New Business Existing Account&quot;),
        ISPICKVAL(Assignment_Type__c, &quot;Spin Off&quot;),
        ISPICKVAL(Assignment_Type__c, &quot;KA to NA&quot;),
        ISPICKVAL(Assignment_Type__c, &quot;Consultative&quot;),
        ISPICKVAL(Assignment_Type__c, &quot;Specialty Only&quot;)
    ),
    Total_Hours_of_Complexity_2__c /  (  Total_of_hours_Backend__c * Months_Implementing_Backend__c )  ,
    Total_Hours_of_Complexity_2__c / 640
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case FTE’s</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>