force-app/main/default/objects/Staff_Assignment__c/fields/CM_BOB_FTE_Based_on_Adj_Case_FTE1__c.field-meta.xml
<CustomField>
    <fullName>CM_BOB_FTE_Based_on_Adj_Case_FTE1__c</fullName>
    <label>BOB FTE Based on Adj Case FTE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>