force-app/main/default/objects/Staff_Assignment__c/fields/CM_BOB_FTE_based_on_Adj_Case_FTE_Outlier__c.field-meta.xml
<CustomField>
    <fullName>CM_BOB_FTE_based_on_Adj_Case_FTE_Outlier__c</fullName>
    <label>BOB FTE based on Adj Case FTE-Outlier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>