force-app/main/default/objects/Staff_Assignment__c/fields/CM_Comments__c.field-meta.xml
<CustomField>
    <fullName>CM_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>