force-app/main/default/objects/Staff_Assignment__c/fields/Dedicated_to_case__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_to_case__c</fullName>
    <label>Dedicated to case?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>