force-app/main/default/objects/Staff_Assignment__c/fields/Hours_Of_Complexity_Backend__c.field-meta.xml
<CustomField>
    <fullName>Hours_Of_Complexity_Backend__c</fullName>
    <label>Hours Of Complexity Backend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>