force-app/main/default/objects/Staff_Assignment__c/fields/IPM_Assignment_ID__c.field-meta.xml
<CustomField>
    <fullName>IPM_Assignment_ID__c</fullName>
    <displayFormat>SA-{0000}</displayFormat>
    <label>IPM Assignment ID</label>
    <type>AutoNumber</type>
</CustomField>