force-app/main/default/objects/Staff_Assignment__c/fields/IPM_Comments__c.field-meta.xml
<CustomField>
    <fullName>IPM_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IPM Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>