force-app/main/default/objects/Staff_Assignment__c/fields/IPM_Dedicated_to_Case__c.field-meta.xml
<CustomField>
    <fullName>IPM_Dedicated_to_Case__c</fullName>
    <label>IPM - Dedicated to Case?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>