force-app/main/default/objects/Staff_Assignment__c/fields/IPM_Information__c.field-meta.xml
<CustomField>
    <fullName>IPM_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IPM Information</label>
    <referenceTo>IPM_Information__c</referenceTo>
    <relationshipLabel>Staff Assignment</relationshipLabel>
    <relationshipName>Staff_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>