force-app/main/default/objects/Staff_Assignment__c/fields/IPM_Weighting__c.field-meta.xml
<CustomField>
    <fullName>IPM_Weighting__c</fullName>
    <formula>IF(
    IPM_Years_of_Experience__c &lt;= 1, 
    0.25,
    IF(
        IPM_Years_of_Experience__c &lt;= 3, 
        0.15,
        IF(
            IPM_Years_of_Experience__c &lt;= 5, 
            0.05,
            0
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IPM - Weighting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>