force-app/main/default/objects/Staff_Assignment__c/fields/IPM_Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>IPM_Years_of_Experience__c</fullName>
    <inlineHelpText>Enter a number as an whole number</inlineHelpText>
    <label>IPM - Years of Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>