force-app/main/default/objects/Staff_Assignment__c/fields/Last_Policy_UPdate__c.field-meta.xml
<CustomField>
    <fullName>Last_Policy_UPdate__c</fullName>
    <description>Created for capacity planning batch to update</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Policy UPdate</label>
    <type>Date</type>
</CustomField>