force-app/main/default/objects/Staff_Assignment__c/fields/Medical_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Medical_Policy_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Number</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select Active Policy which belongs to this Customer.</errorMessage>
        <filterItems>
            <field>$Source.Customer_Name__c</field>
            <operation>equals</operation>
            <valueField>Policy_Information__c.Company__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Policy_Information__c</referenceTo>
    <relationshipLabel>Staff Assignment</relationshipLabel>
    <relationshipName>Staff_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>