force-app/main/default/objects/Staff_Assignment__c/fields/Meetings_Score__c.field-meta.xml
<CustomField>
    <fullName>Meetings_Score__c</fullName>
    <formula>CASE(
    Meetings__c,
    &quot;Standard&quot;, 56,
    &quot;Complex&quot;, 112,
    &quot;Highly Complex&quot;, 168,
    &quot;Consultative - 1 mtg/wk&quot;, 28,
    &quot;Consultative - 1 mtg/2 weeks&quot;, 14,
    &quot;Special Project 1&quot;, 26,
    &quot;Special Project 2&quot;, 56,
    &quot;Special Project 3&quot;, 84,
    &quot;Special Project 4&quot;, 112,
    &quot;Special Project 5&quot;, 140,
    0
)</formula>
    <label>Meetings Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>