force-app/main/default/objects/Staff_Assignment__c/fields/Months_Implementing_Backend__c.field-meta.xml
<CustomField>
    <fullName>Months_Implementing_Backend__c</fullName>
    <label>Months Implementing Backend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>