force-app/main/default/objects/Staff_Assignment__c/fields/of_case__c.field-meta.xml
<CustomField>
    <fullName>of_case__c</fullName>
    <inlineHelpText>If a benefit Consultant is assigned, the BC gets .25 of the case and the CM gets .75. If multiple CM&apos;s are assigned, it is the CD&apos;s discretion what the split should be between CM&apos;s.</inlineHelpText>
    <label>% of case</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>