force-app/main/default/objects/Staff_Assignment__c/fields/Override_IPM_Weighting__c.field-meta.xml
<CustomField>
    <fullName>Override_IPM_Weighting__c</fullName>
    <label>Override IPM - Weighting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>