force-app/main/default/objects/Staff_Assignment__c/fields/Override_of_case__c.field-meta.xml
<CustomField>
    <fullName>Override_of_case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>in case user wants to override the % of case updated by process builder</description>
    <label>Override % of case</label>
    <type>Checkbox</type>
</CustomField>