force-app/main/default/objects/Staff_Assignment__c/fields/Project_Scope__c.field-meta.xml
<CustomField>
    <fullName>Project_Scope__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>