force-app/main/default/objects/Staff_Assignment__c/fields/Related_Policy__c.field-meta.xml
<CustomField>
    <fullName>Related_Policy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Related Policy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>