force-app/main/default/objects/Staff_Assignment__c/fields/Should_Extended_AMT_be_updated__c.field-meta.xml
<CustomField>
    <fullName>Should_Extended_AMT_be_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Should Extended AMT be updated</label>
    <type>Checkbox</type>
</CustomField>