force-app/main/default/objects/Staff_Assignment__c/fields/Special_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Special_Project_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Special Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>