force-app/main/default/objects/Staff_Assignment__c/fields/Staff_assignment_list_search__c.field-meta.xml
<CustomField>
    <fullName>Staff_assignment_list_search__c</fullName>
    <description>to search staff user assignment in list view</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Staff assignment list search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>