force-app/main/default/objects/Staff_Assignment__c/fields/Staff_User_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Staff_User_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND (2 OR 3)) OR (4 AND (5 OR 6 OR 7)) OR (8 AND (9 OR 10))</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>IPM Assignment</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e3s000000VQPOAA4</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e3s000000VQPTAA4</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Policy Assignment</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e6A000001o32SQAQ</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e3s000000ieLEAAY</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e6A000001o32TQAQ</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Special Project</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e3s000000VQPOAA4</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e3s000000VQPTAA4</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Staff_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>