force-app/main/default/objects/Staff_Assignment__c/fields/Staff_Years_Of_Experience_Backend__c.field-meta.xml
<CustomField>
    <fullName>Staff_Years_Of_Experience_Backend__c</fullName>
    <formula>Staffing_Assignment__r.IPM_Years_of_Experience_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Years Of Experience Backend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>