force-app/main/default/objects/Staff_Assignment__c/fields/Staffing_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Staffing_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff ID</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6)</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>IPM Assignment</value>
        </filterItems>
        <filterItems>
            <field>Staff__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>IPM Staff</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Policy Assignment</value>
        </filterItems>
        <filterItems>
            <field>Staff__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>CSI Staff</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Special Project</value>
        </filterItems>
        <filterItems>
            <field>Staff__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>IPM Staff</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>Staff Assignment</relationshipLabel>
    <relationshipName>Staffing_Information</relationshipName>
    <type>Lookup</type>
</CustomField>