force-app/main/default/objects/Staff_Assignment__c/fields/Total_Hours_of_Complexity_2__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_of_Complexity_2__c</fullName>
    <formula>IF(ISPICKVAL(Assignment_Type__c, &apos;Special Project&apos;), 
Meetings_Score__c + Staff_Years_Of_Experience_Backend__c, 
Hours_Of_Complexity_Backend__c +  Staff_Years_Of_Experience_Backend__c)</formula>
    <label>Total Hours of Complexity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>