force-app/main/default/objects/Staff_Assignment__c/fields/Total_Hours_of_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_of_Complexity__c</fullName>
    <label>Total Hours of Complexity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>