force-app/main/default/objects/Staff_Assignment__c/fields/Total_of_hours_Backend__c.field-meta.xml
<CustomField>
    <fullName>Total_of_hours_Backend__c</fullName>
    <label>Total of hours Backend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>