force-app/main/default/objects/Staff_Assignment__c/fields/Who_is_being_replaced__c.field-meta.xml
<CustomField>
    <fullName>Who_is_being_replaced__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who is being replaced?</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Customer_Name__c</field>
            <operation>equals</operation>
            <valueField>Service_AMT__c.Company__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service_AMT__c</referenceTo>
    <relationshipLabel>Staff Assignment</relationshipLabel>
    <relationshipName>Staff_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>