force-app/main/default/objects/Staff_Assignment__c/fields/Years_of_Experience_Score__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Experience_Score__c</fullName>
    <formula>Staff_User_Assignment__r.IPM_Weighting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Years of Experience Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>