force-app/main/default/objects/Staff_Assignment__c/recordTypes/IPM_Assignment.recordType-meta.xml
<RecordType>
    <fullName>IPM_Assignment</fullName>
    <active>true</active>
    <label>IPM Assignment</label>
</RecordType>