force-app/main/default/objects/Staff_Assignment__c/recordTypes/Policy_Assignment.recordType-meta.xml
<RecordType>
    <fullName>Policy_Assignment</fullName>
    <active>true</active>
    <label>Policy Assignment</label>
</RecordType>