force-app/main/default/objects/Staff_Assignment__c/recordTypes/Special_Project.recordType-meta.xml
<RecordType>
    <fullName>Special_Project</fullName>
    <active>true</active>
    <label>Special Project</label>
</RecordType>