force-app/main/default/objects/Staff_Assignment__c/validationRules/Term_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Term_date_validation</fullName>
    <active>true</active>
    <description>You cannot create staff assignment record if staff has term date value.</description>
    <errorConditionFormula>NOT(ISNULL(Staffing_Assignment__r.Term_Date__c))</errorConditionFormula>
    <errorMessage>You cannot create staff assignment record if staff has term date value.</errorMessage>
</ValidationRule>