force-app/main/default/objects/Staff_Assignment__c/listViews/All_Active_SBC_Assignments.listView-meta.xml
<ListView>
    <fullName>All_Active_SBC_Assignments</fullName>
    <columns>NAME</columns>
    <columns>Staff_User_Assignment__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Medical_Policy_Number__c</columns>
    <columns>of_case__c</columns>
    <columns>CM_BOB_FTE_Based_on_Adj_Case_FTE1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Role_on_Case__c</field>
        <operation>equals</operation>
        <value>Specialty Benefits Consultant</value>
    </filters>
    <label>All Active SBC Assignments</label>
</ListView>