force-app/main/default/objects/Staff_Assignment__c/listViews/All_Active_Staff_Assignments.listView-meta.xml
<ListView>
    <fullName>All_Active_Staff_Assignments</fullName>
    <columns>NAME</columns>
    <columns>Staff_User_Assignment__c</columns>
    <columns>Staffing_Assignment__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Medical_Policy_Number__c</columns>
    <columns>Role_on_Case__c</columns>
    <columns>of_case__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Active Staff Assignments</label>
</ListView>