force-app/main/default/objects/Staff_Assignment__c/listViews/Copy_of_Staff_Assignments_Customer_Q_R_S.listView-meta.xml
<ListView>
    <fullName>Copy_of_Staff_Assignments_Customer_Q_R_S</fullName>
    <booleanFilter>1 AND (2 OR 3 or 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>Staff_User_Assignment__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Medical_Policy_Number__c</columns>
    <columns>Role_on_Case__c</columns>
    <columns>of_case__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Customer_Name__c</field>
        <operation>startsWith</operation>
        <value>T</value>
    </filters>
    <filters>
        <field>Customer_Name__c</field>
        <operation>startsWith</operation>
        <value>U</value>
    </filters>
    <filters>
        <field>Customer_Name__c</field>
        <operation>startsWith</operation>
        <value>V</value>
    </filters>
    <label>Staff Assignments - Customer T U V</label>
</ListView>