force-app/main/default/objects/Staff_Assignment__c/listViews/My_Active_Staff_Assignments.listView-meta.xml
<ListView>
    <fullName>My_Active_Staff_Assignments</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Staffing_Assignment__c</columns>
    <columns>Staff_User_Assignment__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Medical_Policy_Number__c</columns>
    <columns>Role_on_Case__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Active Staff Assignments</label>
</ListView>