force-app/main/default/objects/Staff_Assignment__c/listViews/Numbers.listView-meta.xml
<ListView>
    <fullName>Numbers</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customer_Name__c</field>
        <operation>startsWith</operation>
        <value>7</value>
    </filters>
    <label>Staff Assignment Numbers</label>
</ListView>