force-app/main/default/objects/Staff_Assignment__c/listViews/Staff_Assignment.listView-meta.xml
<ListView>
    <fullName>Staff_Assignment</fullName>
    <columns>NAME</columns>
    <columns>Staff_User_Assignment__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Role_on_Case__c</columns>
    <columns>of_case__c</columns>
    <filterScope>Mine</filterScope>
    <label>Staff Assignment</label>
</ListView>