force-app/main/default/objects/Staff_Assignment__c/listViews/Staff_Assignments_Customer_C.listView-meta.xml
<ListView>
    <fullName>Staff_Assignments_Customer_C</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Staff_User_Assignment__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Medical_Policy_Number__c</columns>
    <columns>Role_on_Case__c</columns>
    <columns>of_case__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Customer_Name__c</field>
        <operation>startsWith</operation>
        <value>C</value>
    </filters>
    <label>Staff Assignments - Customer C</label>
</ListView>